--- a/flaskr/templates/images/submit.html
+++ b/flaskr/templates/images/submit.html
@@ -64,7 +64,7 @@
       <form class="mt-0 p-3 mb-4" method="post" autocomplete="off">
         <div class="form-group">
           <label for="FormControlFile1">Imagen X-Ray del pecho</label>
-          <input type="file" class="form-control-file" id="FormControlFile1">
+          <input type="file"  accept="image/*" class="form-control-file" id="FormControlFile1">
         </div>
       </form>
     </div>
