--- a/flaskr/templates/images/submit.html
+++ b/flaskr/templates/images/submit.html
@@ -14,6 +14,7 @@
 
 <div class="container">
 
+  {% if not show_predictions_modal %}
   <div class="row">
     <div class="col-4 d-flex justify-content-center mb-4 mt-4">
       <div class="card" style="width: 15rem;">
@@ -46,6 +47,24 @@
       </div>
     </div>
   </div>
+  {% endif %}
+
+
+  {% if show_predictions_modal %}
+  <div class="row">
+    <div class="col-12 d-flex justify-content-center mb-4 mt-4">
+      <div class="card" style="width: 15rem;">
+        <img class="card-img-top" src="{{ url_for('static', filename='xray_neumonia_virica.png') }}" alt="Your X-Ray Image">
+        <div class="card-body">
+          <h5 class="card-title">{{result}}</h5>
+          <p class="card-text"> La probabilidad de acierto es del <strong>{{probability}} %</strong></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endif %}
+
+
 
   {% if get_flashed_messages() %}
   <div class="row ml-0 mr-0">
@@ -58,17 +77,34 @@
   {% endif %}
 
 
+  {% if not show_predictions_modal %}
   <div class="row">
 
     <div class="col-12 d-flex justify-content-center mb-3">
-      <form class="mt-0 p-3 mb-4" method="post" autocomplete="off">
+      <form id="submit-img" class="mt-4 p-3 mb-5" method="POST" action="/images/submit" autocomplete="off" enctype="multipart/form-data">
         <div class="form-group">
-          <label for="FormControlFile1">Imagen X-Ray del pecho</label>
-          <input type="file"  accept="image/*" class="form-control-file" id="FormControlFile1">
+          <label for="FormControlFile1">Seleccione una radiografía del pecho:</label>
+          <hr>
+          <input required type="file" name="img_submitted" accept="image/*" class="form-control-file" id="img_submitted">
         </div>
+        <button type="submit" class="mt-4 btn btn-primary" name="submit_img" value="submit_img" >Submit</button>
       </form>
     </div>
   </div>
+  {% endif %}
+
+
+  {% if show_predictions_modal %}
+  <div class="row">
+
+    <div class="col-12 d-flex justify-content-center mb-3">
+      <form id="refresh" class="mt-3 p-3 mb-3" method="GET" action="/images/submit" autocomplete="off" enctype="multipart/form-data">
+        <a href="{{ url_for('images.submit') }}"><button class="btn btn-primary" >REFRESH</button></a>
+      </form>
+    </div>
+  </div>
+  {% endif %}
+
 </div>
 
 
